--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBawoD1w3JhGlyqQtn0Rs33PsF2clg8PIg&libraries=places"></script>
+
     <title>React App</title>
   </head>
   <body>
